sandbox: route fixtures through optional required isolation